@@ -2,8 +2,10 @@ boto3
 botocore
 cryptography
 jinja2
+paramiko
 progressbar2
 pyyaml
 requests
 requests[security]
 requests_toolbelt
+scp
